# naf_framework_solution_wizard

./: .gitignore  FLUTTER_PLAN.md  NAF_Framework_Solution_Wizard.py  README.md  payload_builder.py  puzzle_progress.py  pyproject.toml  requirements.txt  use_case_categories.yml  utils.py
pages/: 05_Puzzle_Demo.py  20_NAF_Solution_Wizard.py  90_Terms_and_Definitions.py
tests/: README.md  TEST_README.md  __init__.py  test_puzzle_progress.py  test_title_roundtrip.py
tests/archive/: RUN_SCRIPTS.md  run_all_tests.py  run_lorem_test.py  test_data_generator.py  test_lorem.py  test_streamlit_ui.py  test_streamlit_upload_integration.py  upload_validator.py
tests/exports/: lorem_export_03c0e79e-879d-418b-8618-454a91bb55e8.json  lorem_export_03c0e79e-879d-418b-8618-454a91bb55e8.markdown  lorem_export_108729f3-31e5-4b93-8b23-beb26a3e73a2.json  lorem_export_108729f3-31e5-4b93-8b23-beb26a3e73a2.markdown  lorem_export_16334e62-4101-4f59-b8a4-14bed343a809.json  lorem_export_16334e62-4101-4f59-b8a4-14bed343a809.markdown  lorem_export_1a54e33d-fd04-4358-9fb5-80e67387bf70.json  lorem_export_1a54e33d-fd04-4358-9fb5-80e67387bf70.markdown  lorem_export_2306c8e2-717b-4036-9436-c27c75649e43.json  lorem_export_2306c8e2-717b-4036-9436-c27c75649e43.markdown  lorem_export_2956d350-ade1-4b9d-a20f-41339ff6d6bc.json  lorem_export_2956d350-ade1-4b9d-a20f-41339ff6d6bc.markdown  lorem_export_2f3b7e87-5efa-4755-851f-01e5cb1bdda5.json  lorem_export_2f3b7e87-5efa-4755-851f-01e5cb1bdda5.markdown  lorem_export_3a682767-4289-4177-bb1b-1ec2d1170954.json  (+84 more)
tests/results/: comprehensive_test_results_.json  (+90 more)
