[project]
name = "naf-framework-solution-wizard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kaleido>=1.2.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pyyaml>=6.0.3",
    "streamlit>=1.57.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
naf-test = "cli:run_naf_test"
naf-test-quick = "cli:run_naf_test_quick"

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["tests/archive", ".*", "build", "dist", "CVS", "_darcs", "{arch}", "*.egg"]

[tool.uv]
package = true

[dependency-groups]
dev = ["pytest", "pytest-timeout"]
