[project]
name = "naf-framework-solution-wizard"
version = "0.1.0"
description = "NAF Framework Solution Wizard"
requires-python = ">=3.11"
dependencies = [
    "kaleido>=1.2.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pyyaml>=6.0.3",
    "streamlit>=1.57.0",
    "jinja2>=3.1.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pages"]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["tests/archive", ".*", "build", "dist", "CVS", "_darcs", "{arch}", "*.egg"]

[dependency-groups]
dev = ["pytest", "pytest-timeout"]
